src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>New</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Negotiation</fullName>
        </values>
        <values>
            <fullName>Finance Review</fullName>
        </values>
        <values>
            <fullName>Free Education License</fullName>
        </values>
        <values>
            <fullName>Free Startup License</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Procurement</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Qualification SDR</fullName>
        </values>
        <values>
            <fullName>Sales Ops Review</fullName>
        </values>
        <values>
            <fullName>Selected %2F Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Finance Review</fullName>
        </values>
        <values>
            <fullName>Renewal 25%25</fullName>
        </values>
        <values>
            <fullName>Renewal 50%25</fullName>
        </values>
        <values>
            <fullName>Renewal 75%25</fullName>
        </values>
        <values>
            <fullName>Renewal DQ 90%25</fullName>
        </values>
        <values>
            <fullName>Sales Ops Review</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ARR_Original_ARR__c</fullName>
        <formula>IF( Original_Opportunity__c = &quot;&quot;,0,ARR__c - Original_Opportunity__r.ARR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR - Original ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <inlineHelpText>Sums ARR of all line items.  Change the inputs at the opp product (opp line) level to see this change.</inlineHelpText>
        <label>ARR</label>
        <summarizedField>OpportunityLineItem.ARR__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Sugar Account ID</description>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allbound_ID__c</fullName>
        <label>Allbound ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <label>Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_User_ID__c</fullName>
        <label>Assigned User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <businessOwnerGroup>Sales_Development</businessOwnerGroup>
        <description>The individual(s) with authority to make a decision have been identified. As larger organizations often have committees of people involved in the decision-making process, it is important to at least understand whether or not a committee or a specific individual would make the decision. ACTION: Identify who can ultimately sign off on the deal and how we are going to establish contact with that Authority. This field, along with the other BANT fields will be used by the sales management team to review SAOs for approval to move to 10%. SFDCSPT-638</description>
        <inlineHelpText>The individual(s) with authority to make a decision have been identified. As larger organizations often have committees of people involved in the decision-making process, it is important to at least understand whether or not a committee or a specific individual would make the decision. 

ACTION: Identify who can ultimately sign off on the deal and how we are going to establish contact with that Authority.</inlineHelpText>
        <label>Authority</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <businessOwnerUser>krzysztof.wroclawski@neo4j.com.trnnadia</businessOwnerUser>
        <description>Auto-renewal is a contractual term. It means that no changes to the terms of the contract are taking place and Neo4j doesn’t need to reach out to the customer to negotiate. All we need to do is automatically generate an invoice to renew. JIRA: SFDCSPT-388</description>
        <inlineHelpText>The contract renews automatically as per the contract terms.</inlineHelpText>
        <label>Auto Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomationBypassDateTime__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>This is a System Admin field used for bypassing Validation Rules and Duplicate Rules. WFRs automatically bypass VRs when they run, which is not the case with PB and Flow. We needed a maintainable solution to enable us to run BP and Flow automation smoothly. It works in tandem with &apos;Is Automation Bypassed?&apos; field. JIRA: SFDCSPT-467</description>
        <inlineHelpText>Strictly a System Admin field.</inlineHelpText>
        <label>Automation Bypass Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <businessOwnerGroup>Sales_Development</businessOwnerGroup>
        <description>Budget is confirmed by the prospect, or a discussion about the budget approval process has been established. ACTION: Discuss budget with prospect as it relates to the specific project. This field, along with the other BANT fields will be used by the sales management team to review SAOs for approval to move to 10%. JIRA: SFDCSPT-638</description>
        <inlineHelpText>Budget is confirmed by the prospect, or a discussion about the budget approval process has been established. 

ACTION: Discuss budget with prospect as it relates to the specific project.</inlineHelpText>
        <label>Budget</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnForecast__c</fullName>
        <businessOwnerGroup>Renewals</businessOwnerGroup>
        <description>The amount of churn ARR (either full-loss or downsell) that the assigned Renewals Manager projects for this Opportunity. Zero (0) means a flat renewal; a negative value means ARR we plan on losing; a positive value means ARR we plan on gaining (upsell/cross-sell). JIRA: SFDCSPT-506</description>
        <inlineHelpText>The amount of churn ARR (either full-loss or downsell) that the assigned Renewals Manager projects for this Opportunity. Zero (0) means a flat renewal; a negative value means ARR we plan on losing; a positive value means ARR we plan on gaining (upsell/cross-sell). Owned and updated by Renewals only.</inlineHelpText>
        <label>Churn Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Competitor__c</fullName>
        <businessOwnerGroup>Sales</businessOwnerGroup>
        <description>JIRA: SFDCSPT-289; SFDCSPT-459; SFDCSPT-633</description>
        <inlineHelpText>Select the name of the competitor to which the Opportunity has been lost.</inlineHelpText>
        <label>Closed Lost Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AgensGraph</fullName>
                </value>
                <value>
                    <fullName>Alibaba graph</fullName>
                </value>
                <value>
                    <fullName>AllegroGraph</fullName>
                </value>
                <value>
                    <fullName>Amazon (AWS) Neptune</fullName>
                </value>
                <value>
                    <fullName>AnzoGraph DB</fullName>
                </value>
                <value>
                    <fullName>Arango DB</fullName>
                </value>
                <value>
                    <fullName>AtomRain</fullName>
                </value>
                <value>
                    <fullName>Aura Professional</fullName>
                </value>
                <value>
                    <fullName>BigQuery</fullName>
                </value>
                <value>
                    <fullName>Blazegraph</fullName>
                </value>
                <value>
                    <fullName>Cassandra</fullName>
                </value>
                <value>
                    <fullName>DataStax</fullName>
                </value>
                <value>
                    <fullName>Dgraph</fullName>
                </value>
                <value>
                    <fullName>Fauna</fullName>
                </value>
                <value>
                    <fullName>FEDRAMP High Required</fullName>
                </value>
                <value>
                    <fullName>FEDRAMP Medium Required</fullName>
                </value>
                <value>
                    <fullName>FlockDB</fullName>
                </value>
                <value>
                    <fullName>Fluree</fullName>
                </value>
                <value>
                    <fullName>Giraph</fullName>
                </value>
                <value>
                    <fullName>GraphBase</fullName>
                </value>
                <value>
                    <fullName>GraphDB</fullName>
                </value>
                <value>
                    <fullName>Graph Engine</fullName>
                </value>
                <value>
                    <fullName>HGraphDB</fullName>
                </value>
                <value>
                    <fullName>HugeGraph</fullName>
                </value>
                <value>
                    <fullName>HyperGraphDB</fullName>
                </value>
                <value>
                    <fullName>InfiniteGraph</fullName>
                </value>
                <value>
                    <fullName>JanusGraph</fullName>
                </value>
                <value>
                    <fullName>Memgraph</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure Cosmos DB</fullName>
                </value>
                <value>
                    <fullName>Mongo DB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_prod_dev_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Cloud&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Cloud&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Cloud(prod/dev) Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Competitor&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Competitor&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Competitor Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <businessOwnerGroup>Finance</businessOwnerGroup>
        <description>Contract ID for billing. This field links the contact in the finance ERP system to the corresponding Salesforce record. JIRA: SFDCSPT-341</description>
        <externalId>true</externalId>
        <inlineHelpText>Populate the Contract ID associated with the PO.</inlineHelpText>
        <label>Contract ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Terms__c</fullName>
        <inlineHelpText>(Jan9&apos;21) This field is now deprecated, because this field no longer belongs on the Opportunity. Instead use the field on the Opportunity Product line level.</inlineHelpText>
        <label>Contract Terms (deprecated jan9&apos;21)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_of_Lead_Source__c</fullName>
        <description>Copy of lead source to troubleshoot lead to opp conversion process.  Edited on 2020-07-23 Length changed from 20 to 80 to resolve an error a rep saw &quot;... the field value is too long ...&quot;</description>
        <label>Copy of Lead Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Project Profile</label>
        <referenceTo>Customer_Project_Profile__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DLRS_last_seen_influencer_PI_Acct_Id__c</fullName>
        <description>https://neo4j--organizer.na122.visual.force.com/a7z3s0000004SOcAAM nicknameis: This is addon to ORE a7z3s0000004SJSAA2 to surface PI info in Opp reports. casesafeid (18) + maximum Account name length (255) warrants 273 length limit.</description>
        <inlineHelpText>This field is for system admin use only. Other formula fields may reference it for the purpose of surfacing the information onto Opportunity reports (a7z3s0000004SOcAAM )</inlineHelpText>
        <label>DLRS LastSeen influencer PI AcctComboId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DLRS_last_seen_influencer_PI_Ctc_Id__c</fullName>
        <description>https://neo4j--organizer.na122.visual.force.com/a7z3s0000004SOcAAM nicknameis: This is addon to ORE a7z3s0000004SJSAA2 to surface PI info in Opp reports. casesafeid (18) + maximum Contact name length (120) warrants at least 138 length limit.</description>
        <inlineHelpText>This field is for system admin use only. Other formula fields may reference it for the purpose of surfacing the information onto Opportunity reports (a7z3s0000004SOcAAM )</inlineHelpText>
        <label>DLRS last seen influencer PI CtcComboId</label>
        <length>138</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLRS_last_seen_primary_PI_Acct_Id__c</fullName>
        <description>https://neo4j--organizer.na122.visual.force.com/a7z3s0000004SOcAAM nicknameis: This is addon to ORE a7z3s0000004SJSAA2 to surface PI info in Opp reports. casesafeid (18) + maximum Account name length (255) warrants 273 length limit.</description>
        <inlineHelpText>This field is for system admin use only. Other formula fields may reference it for the purpose of surfacing the information onto Opportunity reports (a7z3s0000004SOcAAM )</inlineHelpText>
        <label>DLRS last seen primary PI AcctComboId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DLRS_last_seen_primary_PI_Ctc_Id__c</fullName>
        <description>https://neo4j--organizer.na122.visual.force.com/a7z3s0000004SOcAAM nicknameis: This is addon to ORE a7z3s0000004SJSAA2 to surface PI info in Opp reports. casesafeid (18) + maximum Contact name length (120) warrants at least 138 length limit.</description>
        <inlineHelpText>This field is for system admin use only.  Other formula fields may reference it for the purpose of surfacing the information onto Opportunity reports (a7z3s0000004SOcAAM )</inlineHelpText>
        <label>DLRS last seen primary PI CtcComboId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DLRS_last_seen_referral_PI_Acct_Id__c</fullName>
        <description>https://neo4j--organizer.na122.visual.force.com/a7z3s0000004SOcAAM nicknameis: This is addon to ORE a7z3s0000004SJSAA2 to surface PI info in Opp reports. casesafeid (18) + maximum Account name length (255) warrants 273 length limit.</description>
        <inlineHelpText>This field is for system admin use only. Other formula fields may reference it for the purpose of surfacing the information onto Opportunity reports (a7z3s0000004SOcAAM )</inlineHelpText>
        <label>DLRS last seen referral PI AcctComboId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DLRS_last_seen_referral_PI_Ctc_Id__c</fullName>
        <description>https://neo4j--organizer.na122.visual.force.com/a7z3s0000004SOcAAM nicknameis: This is addon to ORE a7z3s0000004SJSAA2 to surface PI info in Opp reports. casesafeid (18) + maximum Contact name length (120) warrants at least 138 length limit.</description>
        <inlineHelpText>This field is for system admin use only. Other formula fields may reference it for the purpose of surfacing the information onto Opportunity reports (a7z3s0000004SOcAAM )</inlineHelpText>
        <label>DLRS last seen referral PI CtcComboId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DLRS_last_seen_reseller_PI_Acct_Id__c</fullName>
        <description>https://neo4j--organizer.na122.visual.force.com/a7z3s0000004SOcAAM nicknameis: This is addon to ORE a7z3s0000004SJSAA2 to surface PI info in Opp reports. casesafeid (18) + maximum Account name length (255) warrants 273 length limit.</description>
        <inlineHelpText>This field is for system admin use only. Other formula fields may reference it for the purpose of surfacing the information onto Opportunity reports (a7z3s0000004SOcAAM )</inlineHelpText>
        <label>DLRS last seen reseller PI AcctComboId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DLRS_last_seen_reseller_PI_Ctc_Id__c</fullName>
        <description>https://neo4j--organizer.na122.visual.force.com/a7z3s0000004SOcAAM nicknameis: This is addon to ORE a7z3s0000004SJSAA2 to surface PI info in Opp reports. casesafeid (18) + maximum Contact name length (120) warrants at least 138 length limit.</description>
        <inlineHelpText>This field is for system admin use only. Other formula fields may reference it for the purpose of surfacing the information onto Opportunity reports (a7z3s0000004SOcAAM )</inlineHelpText>
        <label>DLRS last seen reseller PI CtcComboId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Close_qualification_to_close__c</fullName>
        <description>Number of days from when an opportunity hits qualification to when it is closed won.</description>
        <formula>CloseDate -  Qualification_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close (qualification to close)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Decision&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Decision&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Decision Maker Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MondayCall created</description>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Notes__c</fullName>
        <description>Discovery notes from sales engineers</description>
        <label>Discovery Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Ops use for opps that should not have renewal auto-created upon Closed Won (debookings, system fixes, etc)</description>
        <label>Do Not Create Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAP_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A temporary field to give the Aura EAP core team the ability to track Aura Enterprise EAP Opportunities. Will be  removed from the page layouts by 2021, but remain reportable. 
JIRA: SFDCSPT-117</description>
        <inlineHelpText>A temporary field to give the Aura EAP core team the ability to track Aura Enterprise EAP Opportunities.</inlineHelpText>
        <label>EAP Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EligibleforSAOCredit__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates, based on the information on the Products, whether this Opportunity qualifies for for SAO credit. Only subscription products that can be sold on a stand-alone basis for new projects qualify. New projects are defined as either new customers or cross-sell opportunities with existing customers. If a Product that would otherwise qualify has no price in the &apos;Sales Price&apos; field, it will not be tagged as qualified. If at least one of the Products on the Opportunity meets the criteria, the Opportunity is tagged as qualified. JIRA: SFDCSPT-661</description>
        <inlineHelpText>Indicates whether this opportunity qualifies for SAO credit. Only subscription products that can be sold on a stand-alone basis for new projects qualify. New projects are defined as either new customers or cross-sell opportunities with existing customers. &apos;Sales Price&apos; field on the product record must have a price in order for that product to be tagged as qualified.</inlineHelpText>
        <label>Eligible for SAO Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Criteria__c</fullName>
        <description>Evaluation Criteria for sales engineers</description>
        <label>Evaluation Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Stage__c</fullName>
        <label>Evaluation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluation/POC Planning</fullName>
                </value>
                <value>
                    <fullName>In Evaluation/POC</fullName>
                </value>
                <value>
                    <fullName>Evaluation/POC Complete</fullName>
                </value>
                <value>
                    <fullName>Technical Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Status_Notes__c</fullName>
        <description>Evaluation Status Notes from sales engineers</description>
        <label>Evaluation Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Closed_Date__c</fullName>
        <label>Expected Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Engineer2__c</fullName>
        <label>z_Field Engineer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Cowley</fullName>
                </value>
                <value>
                    <fullName>Alex Rivilis</fullName>
                </value>
                <value>
                    <fullName>Benoit Simard</fullName>
                </value>
                <value>
                    <fullName>Chris Skardon</fullName>
                </value>
                <value>
                    <fullName>Chris Upkes</fullName>
                </value>
                <value>
                    <fullName>Cynthia Femano</fullName>
                </value>
                <value>
                    <fullName>Dana Canzano</fullName>
                </value>
                <value>
                    <fullName>Dan Flavin</fullName>
                </value>
                <value>
                    <fullName>Dan Paczosa</fullName>
                </value>
                <value>
                    <fullName>Dave Gordon</fullName>
                </value>
                <value>
                    <fullName>Dave Voutila</fullName>
                </value>
                <value>
                    <fullName>David Fauth</fullName>
                </value>
                <value>
                    <fullName>David Rosemblum</fullName>
                </value>
                <value>
                    <fullName>Ed Crowther</fullName>
                </value>
                <value>
                    <fullName>Gabe Stanek</fullName>
                </value>
                <value>
                    <fullName>Gal Bello</fullName>
                </value>
                <value>
                    <fullName>Gary Mann</fullName>
                </value>
                <value>
                    <fullName>Gunnar Lindfors</fullName>
                </value>
                <value>
                    <fullName>Håkan Löfqvist</fullName>
                </value>
                <value>
                    <fullName>Jeffrey Tallman</fullName>
                </value>
                <value>
                    <fullName>Jesus Barrasa</fullName>
                </value>
                <value>
                    <fullName>Joe Depeau</fullName>
                </value>
                <value>
                    <fullName>Joshua Yu</fullName>
                </value>
                <value>
                    <fullName>Justin Fine</fullName>
                </value>
                <value>
                    <fullName>Kees Vegter</fullName>
                </value>
                <value>
                    <fullName>Kevin Kyle</fullName>
                </value>
                <value>
                    <fullName>Ljubica Lazarevic</fullName>
                </value>
                <value>
                    <fullName>Luis Salvador</fullName>
                </value>
                <value>
                    <fullName>Luke Gannon</fullName>
                </value>
                <value>
                    <fullName>Mark Quinsland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the User object. Results narrowed down by profile -- Neo4j - Engineering. JIRA: SFDCSPT-11</description>
        <inlineHelpText>Who is the Field Engineer for this Opportunity?</inlineHelpText>
        <label>Field Engineer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Neo4j - Engineering,PSE - Management</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Engineer_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Year_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Year Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <defaultValue>&quot;Omitted&quot;</defaultValue>
        <description>This field controls the forecast category field and updates it via the process builder. This was created because the stock forecast category changes to the default forecast value based on the sales stage. We needed something that will stay the same until the rep changes it. The process builder will be used to keep these fields synced so we can use out of the box forecasting functionality as well.</description>
        <label>Forecast Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Most Likely</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;fullfillment&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;fullfillment&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Fulfillment Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gating_Items__c</fullName>
        <description>Gating Items from sales engineers</description>
        <label>Gating Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GlobalTerritory__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>Indicates what global region the parent Account is part of based on the shipping country. SFDCSPT-449</description>
        <formula>Account.Global_Territory__c</formula>
        <inlineHelpText>Indicates what global region the parent Account is part of based on the shipping country.</inlineHelpText>
        <label>Global Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Hardware&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Hardware&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Hardware Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Pro_Services_Line_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Pro Services Line Items</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>